Fixes white-space:nowrap behavior with flex boxes. see #45

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -92,11 +92,12 @@ html, body, .container {
     flex: 1;
     flex-direction: column;
     position: relative;
+    min-width: 0px;
 }
 
 .topic {
     height: 32px;
-    line-height: 22px;
+    line-height: 24px;
     min-height: 32px;
     overflow: visible;
     text-overflow: ellipsis;
@@ -109,7 +110,6 @@ html, body, .container {
     padding-left: 4px;
     padding-right: 36px;
     height: 32px;
-    overflow: hidden;
     color: @topic-color;
     background-color: @topic-bg;
     white-space: nowrap;
